Fix margin/spacing

--- a/data/style/Grid.css
+++ b/data/style/Grid.css
@@ -41,7 +41,6 @@
     border-radius: 50%;
     min-height: 24px;
     min-width: 24px;
-    margin: 3px;
 }
 
 #today #date {
